--- a/ADT/ADT.vcxproj.filters
+++ b/ADT/ADT.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="Linear_list\Vector_list.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Linear_list\Linked_list.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
