--- a/Tests/Tests.vcxproj
+++ b/Tests/Tests.vcxproj
@@ -158,6 +158,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Linear_list\Array_list_tests.cpp" />
+    <ClCompile Include="Linear_list\Circular_linked_list_tests.cpp" />
     <ClCompile Include="Linear_list\Linked_list_tests.cpp" />
     <ClCompile Include="Linear_list\Vector_list_tests.cpp" />
     <ClCompile Include="utils_tests.cpp" />
