将bin_sort函数改为模板函数

--- a/Applications/Applications.vcxproj.filters
+++ b/Applications/Applications.vcxproj.filters
@@ -18,12 +18,15 @@
     <ClCompile Include="Linear_list\bin_sort_tests.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="Linear_list\bin_sort.cpp">
+    <ClCompile Include="Linear_list\student.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Linear_list\bin_sort.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Linear_list\student.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
