--- a/Applications/Applications.vcxproj
+++ b/Applications/Applications.vcxproj
@@ -162,11 +162,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Linear_list\bin_sort.cpp" />
     <ClCompile Include="Linear_list\bin_sort_tests.cpp" />
+    <ClCompile Include="Linear_list\student.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Linear_list\bin_sort.h" />
+    <ClInclude Include="Linear_list\student.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
