--- a/Applications/Applications.vcxproj.filters
+++ b/Applications/Applications.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="Linear_list\radix_sort_tests.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Stack\parenthesis_matching.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Stack\parenthesis_matching_tests.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Linear_list\bin_sort.h">
@@ -33,6 +39,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Linear_list\radix_sort.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Stack\parenthesis_matching.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
