完成8.5.2节汉诺塔及测试；Stack类增加成员函数clear

--- a/Applications/Applications.vcxproj
+++ b/Applications/Applications.vcxproj
@@ -167,12 +167,15 @@
     <ClCompile Include="Linear_list\student.cpp" />
     <ClCompile Include="Stack\parenthesis_matching.cpp" />
     <ClCompile Include="Stack\parenthesis_matching_tests.cpp" />
+    <ClCompile Include="Stack\towers_of_hanoi.cpp" />
+    <ClCompile Include="Stack\towers_of_hanoi_tests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Linear_list\bin_sort.h" />
     <ClInclude Include="Linear_list\radix_sort.h" />
     <ClInclude Include="Linear_list\student.h" />
     <ClInclude Include="Stack\parenthesis_matching.h" />
+    <ClInclude Include="Stack\towers_of_hanoi.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
