--- a/ADT/ADT.vcxproj.filters
+++ b/ADT/ADT.vcxproj.filters
@@ -53,5 +53,11 @@
     <ClInclude Include="Stack\Linked_stack.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Queue\Queue.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Queue\Array_queue.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
