调整目录结构

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,7 @@ if(MSVC)
   add_compile_options(/utf-8)
 endif()
 
-add_subdirectory(Tests)
-add_subdirectory(Applications)
+add_subdirectory(ADT)
 file(GLOB CHAPTERS RELATIVE ${CMAKE_SOURCE_DIR} ch*)
 foreach(c IN ITEMS ${CHAPTERS})
   add_subdirectory(${c})
