重新格式化utils.h，单测改为gtest

--- a/ADT/CMakeLists.txt
+++ b/ADT/CMakeLists.txt
@@ -1,3 +1,4 @@
+add_gtest(NAME utils_test SOURCE utils_test.cpp)
 add_gtest(NAME Array_list_test SOURCE Array_list_test.cpp)
 add_gtest(NAME Vector_list_test SOURCE Vector_list_test.cpp)
 add_gtest(NAME Linked_list_test SOURCE Linked_list_test.cpp)
